updating with fish value graph

--- a/James_fisheries.Rmd
+++ b/James_fisheries.Rmd
@@ -6,5 +6,50 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE)
+
+library(tidyverse)
+library(here)
+library(janitor)
+library(paletteer)
+
 ```
+
+Read in the noaa_landings.csv
+
+```{r}
+us_landings <- read_csv(here("data","noaa_landings.csv"),
+                        na = "no data")
+```
+
+Now let's clean up the column names:
+```{r}
+salmon_clean <- us_landings %>% 
+  clean_names() %>% 
+  mutate(afs_name = str_to_lower(afs_name)) %>% 
+  mutate(dollars_num = parse_number(dollars_usd)) %>% 
+  filter(str_detect(afs_name, pattern = "salmon")) %>% 
+  separate(afs_name, into = c("salmon_group", "subgroup"), sep = ", ") %>% 
+  drop_na(dollars_num)
+```
+
+### Annual total value by salmon subgroup
+```{r}
+salmon_us_annual <- salmon_clean %>% 
+  group_by(year, subgroup) %>% 
+  summarize(
+    tot_value = sum(dollars_num, na.rm = TRUE)
+  )
+```
+
+From `salmon_us_annual`, create a line graph with year on the x-axis and tot_value on the y-axis. Hint: remember groupings!
+```{r}
+ggplot(data = salmon_us_annual, aes(x = year, y = tot_value, group = subgroup)) +
+         geom_line(aes(color = subgroup)) +
+  theme_bw() +
+  labs(x = "Year", y = "US Commercial Salmon Value (USD)", title = "Salmon Catch by Year") +
+  scale_color_paletteer_d("ggsci::springfield_simpsons")
+
+#ggsci	springfield_simpsons
+```
+
